@@ -10,6 +10,7 @@ import java.io.IOException;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URL;
+import java.util.Objects;
 
 public class WebCrawler implements Runnable {
     private final static int MAX_DEPTH = 3;
@@ -27,28 +28,38 @@ public class WebCrawler implements Runnable {
 
 
     private void crawl(int level, String Url) {
-            Document doc = request(Url);
-            if (doc != null) {
-                State.saveDocument(doc, Url);
-                // TODO Bulk Insert All Links
-                for (Element link : doc.select("a[href]")) {
-                    URL NextLink;
-                    try {
-                        NextLink = new URL(link.absUrl("href"));
-                    } catch (MalformedURLException e) {
-                        continue;
-                    }
-                    String NextUrl = NextLink.toString();
+        DocumentWrapper WDoc = new DocumentWrapper(request(Url));
+        Document doc = WDoc.doc;
+        String host = null;
+        try {
+            host = new URL(Url).getHost();
+        } catch (MalformedURLException e) {
+            e.printStackTrace();
+        }
+        if (doc != null && !State.docExists(WDoc.crc)) {
+            State.saveDocument(WDoc, Url);
+            // TODO Bulk Insert All Links
+            for (Element link : doc.select("a[href]")) {
+                URL NextLink;
+                try {
                     //Normalize url
-                    NextUrl = URI.create(NextUrl).normalize().toString();
-                    if(State.isAllowedByRobotsTxt(NextLink.getProtocol() + "://" + NextLink.getHost(), NextUrl))
-                        State.saveUrl(NextUrl);
+                    NextLink = new URL(URI.create(link.absUrl("href").toLowerCase()).normalize().toString());
+                } catch (MalformedURLException e) {
+                    continue;
+                }
+                String NextUrl = NextLink.toString();
+                String NextHost = NextLink.getHost();
+                if (State.isAllowedByRobotsTxt(NextLink.getProtocol() + "://" + NextHost, NextUrl)) {
+                    if(State.saveUrl(NextUrl))
+                        if (!Objects.equals(host, NextHost))
+                            State.incrementHost(NextHost);
                 }
             }
-            State.urlCrawled(Url);
-            String link = State.getNextUrl();
-            if (link!="")//null means no more links to crawl
-                crawl(level + 1, link);
+        }
+        State.urlCrawled(Url);
+        String link = State.getNextUrl();
+        if (link != "")//null means no more links to crawl
+            crawl(level + 1, link);
     }
 
     private Document request(String Url) {
